crates/ui/tests/it/snapshots/it__dialogue__overlay_on_the_battle_map_snapshot.snap
---
source: crates/ui/tests/it/dialogue.rs
expression: h.snapshot()
---
                                       Village of Heth, dusk          ┌────────────────────────────┐
 ╔════════════════════════════════╗                              ┌────────────────────────────────┐│
 ║                                ║                              │                                ││
 ║                                ║                              │                                ││
 ║                                ║                              │                                ││
 ║                                ║                              │                                ││
 ║                                ║                              │                                ││
 ║                                ║                              │                                ││
 ║                                ║                              │                                ││
 ║                                ║                              │                                ││
 ║                                ║                              │                                ││
 ║                                ║♣♣♣♠♠♠♠^^^^▲▲                 │                                ││
 ║                                ║a··♣♣♣♣^^^^^^                 │                                ││
 ║                                ║·Br..♣♣♣♣....                 │                                ││
 ║                                ║.........╦╦..                 │                                ││
 ║                                ║r..▓▓▓▓▓▓▓▓..                 │                                ││
 ║                                ║...▓▓░░╦╦▓▓..                 │                                ││
 ║                                ║...▓▓░░░░▓▓..                 │                                ││
 ╚════════════════════════════════╝.Fr▓▓▓▓▐▌▓▓..                 └────────────────────────────────┘│
             Test Lord                                                      Test Knight            │
                                                                      │                            │
┌── Test Lord ─────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
│   Better late than... well.                                                                      │
│                                                                                                  │
│                                                                                                  │
│                                                                                             f ▼  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
--- colours ---
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbaaaaaaaaacccccccccccccccccccccccccccccc
addddddddddddddddddddddddddddddddddaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaccccccccccccccccccccccccccccccccccc
adeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeecc
adeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeecc
adeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeecc
adeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeecc
adeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeecc
adeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeecc
adeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeecc
adeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeecc
adeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeecc
adeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedfffgggghhhhiiaaaaaaaaaaaaaaaaaceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeecc
adeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedjkkffffhhhhhhaaaaaaaaaaaaaaaaaceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeecc
adeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedkllmmffffmmmmaaaaaaaaaaaaaaaaaceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeecc
adeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedmmmmmmmmmnnmmaaaaaaaaaaaaaaaaaceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeecc
adeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedlmmoooooooommaaaaaaaaaaaaaaaaaceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeecc
adeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedmmmooppnnoommaaaaaaaaaaaaaaaaaceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeecc
adeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedmmmooppppoommaaaaaaaaaaaaaaaaaceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeecc
addddddddddddddddddddddddddddddddddmllooooqqoommaaaaaaaaaaaaaaaaaccccccccccccccccccccccccccccccccccc
aeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaeeeeeeeeeeerrrrrrrrrrreeeeeeeeeeeec
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaceeeeeeeeeeeeeeeeeeeeeeeeeeeec
cccssssssssssscccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
ceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeec
ceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeec
ceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeec
ceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeec
ceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeereseec
cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
--- legend ---
a = fg:text bg:black
b = fg:text_highlight bg:black
c = fg:panel_border bg:panel_bg
d = fg:panel_border_focus bg:panel_bg
e = fg:text bg:panel_bg
f = fg:forest bg:forest_bg
g = fg:thicket bg:thicket_bg
h = fg:mountain bg:mountain_bg
i = fg:peak bg:peak_bg
j = fg:enemy bg:road_bg
k = fg:road bg:road_bg
l = fg:enemy bg:grass_bg
m = fg:grass bg:grass_bg
n = fg:fort bg:fort_bg
o = fg:stone bg:stone_bg
p = fg:floor bg:floor_bg
q = fg:wood bg:stone_bg
r = fg:text_dim bg:panel_bg
s = fg:text_highlight bg:panel_bg
--- overlays ---
over  289,222 14x2  hp_high
over  280,254 7x2  hp_high
over  280,206 7x2  hp_high
over  289,302 14x2  hp_high
under sprite 16,32 256x256  portraits/test_lord/happy.png 0,0 32x32
under sprite 528,32 256x256  portraits/test_knight/angry.png 0,0 32x32 flip opacity=140
